tests222/tests2/test378.out
lli: <stdin>:1:1: error: expected top-level entity
line 8: variable g6B09qSYE is not defined
^
